<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <!--     Logo   -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/logo" />

        <!-- Heading -->
        <TextView
            android:id="@+id/tv_suit_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:text="@string/suit_case"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- Text Fields Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:hint="@string/enter_email"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Text Fields Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="15dp"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot Password Section -->
        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="end"
            android:text="@string/forgot_password" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btn_loginButton"
            android:layout_height="46dp"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/login" />

        <!-- Google Sign in -->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:buttonSize="wide" />

        <!-- Register Here -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account" />

            <TextView
                android:id="@+id/tv_register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/blue"
                android:text="@string/register_here" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>